src/tui/render/snapshots/agent_bar__tui__render__tests__dashboard_renders_providers_table.snap
---
source: src/tui/render/mod.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────- ╮"
"│   ╭ Claude ────────────────────────────────────────────✓ ok╮▲│"
"│ ▸ │sessão  ███████▊░░░░░░░░░░░░░░░░░░░░░░   26%  → 23:00   │█│"
"│   │   coletando…                                           │█│"
"│   │                                                        │█│"
"│ ◆ │                                                        │█│"
"│ ● ╰────────────────────────────────────────────────────────╯█│"
"│ ● ╭ Codex ─────────────────────────────────────────────✓ ok╮█│"
"│   │sessão  ▎░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    1%  → 01:28   │█│"
"│   │   coletando…                                           │█│"
"│ H │                                                        │█│"
"│ L │                                                        │█│"
"│ W ╰────────────────────────────────────────────────────────╯█│"
"│   ╭ Amp ───────────────────────────────────────────────✓ ok╮█│"
"│   │sessão  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    0%  → -       │█│"
"│   │   coletando…                                           │█│"
"│   │                                                        │█│"
"│   │                                                        │▼│"
"│         ↵ abrir     r atualizar     ? ajuda     q sair       │"
"╰──────────────────────────────────────────────────────────────╯"
