src/tui/render/snapshots/agent_bar__tui__render__tests__dashboard_renders_wide_160.snap
---
source: src/tui/render/mod.rs
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                                                                                                                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━━━┓┏ Todos os providers ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃◆ Claude  26%  ┃┃provider  uso                                                            reset  custo                                                        ┃"
"┃● Codex    1%  ┃┃Claude    █████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 23:00  $2.10                                                        ┃"
"┃● Amp      0%  ┃┃Codex     █░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 01:28  -                                                            ┃"
"┃               ┃┃Amp       ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ -      cr $4.19                                                     ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┗━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total hoje ~$2.10 ┛"
" ↑↓ provider · ←→ aba · Enter detalhe · [q]uit · [?] ajuda                                                                                                      "
