src/tui/render/snapshots/agent_bar__tui__render__tests__dashboard_renders_with_real_cost.snap
---
source: src/tui/render/mod.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────$2.10 ╮"
"│   ╭ Claude ────────────────────────────────────────────● ok╮▲│"
"│ ▸ │sessão  ████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   26%  → 23:00   │█│"
"│   │   $2.10 hoje                                           │█│"
"│   │                                                        │█│"
"│ ◆ │                                                        │█│"
"│ ● ╰────────────────────────────────────────────────────────╯█│"
"│ ● ╭ Codex ─────────────────────────────────────────────● ok╮█│"
"│   │sessão  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒    1%  → 01:28   │█│"
"│   │   - hoje                                               │█│"
"│ H │                                                        │█│"
"│ L │                                                        │█│"
"│ W ╰────────────────────────────────────────────────────────╯█│"
"│   ╭ Amp ───────────────────────────────────────────────● ok╮█│"
"│   │sessão  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒    0%  → -       │█│"
"│   │   cr $4.19 hoje                                        │█│"
"│   │                                                        │█│"
"│   │                                                        │▼│"
"│         ↵ abrir     r atualizar     ? ajuda     q sair       │"
"╰──────────────────────────────────────────────────────────────╯"
