src/tui/render/snapshots/agent_bar__tui__render__tests__help_overlay_clears_over_login_screen.snap
---
source: src/tui/render/mod.rs
assertion_line: 611
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│ VISÃO           ┏ Login ━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ ▸ Geral         ┃ > ◆ Claude ✗ deslogado     ┃┃ Claude                                          ┃│"
"│                 ┃   ● Codex  ✗ deslogado     ┃┃                                                 ┃│"
"│ MAIS            ┃   ● Amp    ✗ deslogado     ┃┃ Abre a REPL do Claude. Digite /login e siga as i┃│"
"│   Histórico     ┃                            ┃┃                                                 ┃│"
"│   Login         ┃                            ┃┃                                                 ┃│"
"│   Waybar        ╭ agent-bar — atalhos ────────────────────────────────────────╮                 ┃│"
"│                 │                      Navegação global                       │                 ┃│"
"│                 │  [?] / Esc   abre/fecha esta ajuda                          │                 ┃│"
"│                 │  up/down     mover seleção na sidebar                       │                 ┃│"
"│                 │  Enter       ativar item selecionado                        │                 ┃│"
"│                 │  h / g / w   Histórico / Login / Waybar                     │                 ┃│"
"│                 │  q           sair                                           │                 ┃│"
"│                 │  r           atualizar quotas                               │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                          Overview                           │                 ┃│"
"│                 │  up/down     selecionar provider                            │                 ┃│"
"│                 │  Enter       abrir detalhe                                  │                 ┃│"
"│                 │  Esc         voltar para lista                              │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                        Waybar Config                        │                 ┃│"
"│                 │  up/down     selecionar campo                               │                 ┃│"
"│                 │  Enter       editar campo                                   │                 ┃│"
"│                 │  s           salvar configuração                            │                 ┃│"
"│                 │  Esc         voltar                                         │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                            Login                            │                 ┃│"
"│                 │  up/down     selecionar provider                            │                 ┃│"
"│                 │  Enter       iniciar login do provider                      │                 ┃│"
"│                 │  Esc         voltar                                         │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                          Histórico                          │                 ┃│"
"│                 │  t           alterna 24h/7d · wheel rola a tabela           │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │  click seleciona · wheel rola · shift+drag seleciona texto  │                 ┃│"
"│                 ╰─────────────────────────────────────────────────────────────╯                 ┃│"
"│                 ┃                            ┃┃                                                 ┃│"
"│                 ┃                            ┃┃                                                 ┃│"
"│                 ┃                            ┃┃                                                 ┃│"
"│                 ┃                            ┃┃                                                 ┃│"
"│                 ┃                            ┃┃         ↵ iniciar login     esc voltar          ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
