src/tui/render/snapshots/agent_bar__tui__render__tests__help_overlay_clears_over_waybar_screen.snap
---
source: src/tui/render/mod.rs
assertion_line: 453
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│                 ╭ Config do Waybar ╮╭ providers  ───────────────────────────────────────────────╮│"
"│ MAIS            │ > providers      ││ claude, codex                                             ││"
"│   Histórico     │   providerOrder  │╰───────────────────────────────────────────────────────────╯│"
"│   Login         │   separators     │╭───────────────────────────────────────────────────────────╮│"
"│   Waybar        │   displayMode    ││ IDs separados por vírgula. Ex: claude, codex, amp         ││"
"│                 │   fxRate         ││                                                           ││"
"│                 │   signal         ││                                                           ││"
"│                 │   interval       ││                                                           ││"
"│                 ╭ agent-bar — atalhos ────────────────────────────────────────╮                 ││"
"│                 │                      Navegação global                       │                 ││"
"│                 │  [?] / Esc   abre/fecha esta ajuda                          │                 ││"
"│                 │  up/down     mover seleção na sidebar                       │                 ││"
"│                 │  Enter       ativar item selecionado                        │                 ││"
"│                 │  h / g / w   Histórico / Login / Waybar                     │                 ││"
"│                 │  q           sair                                           │                 ││"
"│                 │  r           atualizar quotas                               │                 ││"
"│                 │                                                             │                 ││"
"│                 │                      Config do Waybar                       │                 ││"
"│                 │  up/down     selecionar campo                               │                 ││"
"│                 │  Enter       editar campo                                   │                 ││"
"│                 │  s           salvar configuração                            │                 ││"
"│                 │  Esc         voltar                                         │                 ││"
"│                 │                                                             │                 ││"
"│                 │                            Login                            │                 ││"
"│                 │  up/down     selecionar provider                            │                 ││"
"│                 │  Enter       iniciar login do provider                      │                 ││"
"│                 │  Esc         voltar                                         │                 ││"
"│                 │                                                             │                 ││"
"│                 │                          Histórico                          │                 ││"
"│                 │  t           alterna 24h/7d · wheel rola a tabela           │                 ││"
"│                 │                                                             │                 ││"
"│                 │  click seleciona · wheel rola · shift+drag seleciona texto  │                 ││"
"│                 ╰─────────────────────────────────────────────────────────────╯                 ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││                                                           ││"
"│                 │                  ││           ↵ editar     s salvar     esc voltar            ││"
"│                 ╰──────────────────╯╰───────────────────────────────────────────────────────────╯│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
