src/tui/render/snapshots/agent_bar__tui__render__tests__help_overlay_renders_snapshot.snap
---
source: src/tui/render/mod.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│                 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ MAIS            ┃ nenhum provider habilitado — veja a tela Config                               ┃│"
"│   Histórico     ┃                                                                               ┃│"
"│   Login         ┃                                                                               ┃│"
"│   Config        ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ╭ agent-bar — atalhos ────────────────────────────────────────╮                 ┃│"
"│                 │                      Navegação global                       │                 ┃│"
"│                 │  [?] / Esc   abre/fecha esta ajuda                          │                 ┃│"
"│                 │  up/down     mover seleção na sidebar                       │                 ┃│"
"│                 │  Enter       ativar item selecionado                        │                 ┃│"
"│                 │  h / g / w   Histórico / Login / Config                     │                 ┃│"
"│                 │  q           sair                                           │                 ┃│"
"│                 │  r           atualizar quotas                               │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                           Config                            │                 ┃│"
"│                 │  up/down     selecionar campo                               │                 ┃│"
"│                 │  Enter       editar campo                                   │                 ┃│"
"│                 │  s           salvar configuração                            │                 ┃│"
"│                 │  Esc         voltar                                         │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                            Login                            │                 ┃│"
"│                 │  up/down     selecionar provider                            │                 ┃│"
"│                 │  Enter       iniciar login do provider                      │                 ┃│"
"│                 │  Esc         voltar                                         │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │                          Histórico                          │                 ┃│"
"│                 │  t           alterna 24h/7d · wheel rola a tabela           │                 ┃│"
"│                 │                                                             │                 ┃│"
"│                 │  click seleciona · wheel rola · shift+drag seleciona texto  │                 ┃│"
"│                 ╰─────────────────────────────────────────────────────────────╯                 ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
